fix: more readable time

--- a/static/style.css
+++ b/static/style.css
@@ -95,7 +95,7 @@ body {
     display: flex;
     align-items: center;
     gap: 1rem;
-    color: #5b5b5b;
+    color: #7f7f7f;
 }
 
 #time {
